<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changename"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />
    <RelativeLayout

        android:background="@drawable/inputbox_shape"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <EditText
            android:background="@null"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_sort_name"
            android:textColorHint="@color/hintcolor"
            android:id="@+id/change_name_et" />
    </RelativeLayout>


    <View
        android:layout_marginTop="10dp"
        android:background="@mipmap/xian"
        android:layout_width="match_parent"
        android:layout_height="0.5px"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/cancle_tv"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/cancle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <View
            android:background="@mipmap/xian"
            android:layout_width="0.5px"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/confirm_tv"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>