<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_backGround"
    android:fitsSystemWindows="true"
    tools:context="com.syezon.note_xh.activity.AboutUsActivity">
    <RelativeLayout
        style="@style/my_actionbar_style"
        android:background="?attr/custom_actionbar_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ActionBarHeight"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/setting_top">
        <ImageView
            android:layout_width="@dimen/ActionBarHeight"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:id="@+id/iv_cancel"
            android:src="@mipmap/back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:text="@string/aboutus_title"
            android:textSize="@dimen/titlesize"
            android:textColor="@color/title_text_color"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:background="@android:color/white"
        android:layout_below="@+id/setting_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@mipmap/logo_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="简易便签"
            android:id="@+id/iv_logo"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:layout_marginTop="109dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus"
            android:textSize="12sp"
            android:id="@+id/textView3"
            android:textColor="@color/mygray"
            android:layout_marginBottom="58dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advice_feedback"
            android:textColor="@color/mygray"
            android:id="@+id/tv_advice"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/textView3"
            android:layout_centerHorizontal="true" />

        <TextView
            android:textSize="40sp"
            android:textColor="?attr/theme_color"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/advice_pic"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/tv_advice"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jianyibianqian"
            android:textColor="@color/mygray"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:id="@+id/textView2"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="1.0.0"
            android:id="@+id/tv_version_name"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>
