<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/activity_backGround"
    tools:context="com.syezon.note_xh.activity.SettingActivity">

    <RelativeLayout
        style="@style/my_actionbar_style"
        android:background="?attr/custom_actionbar_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ActionBarHeight"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">
        <ImageView
            android:layout_width="@dimen/ActionBarHeight"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:id="@+id/iv_cancel"
            android:src="@mipmap/back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:text="@string/setting"
            android:textSize="@dimen/titlesize"
            android:textColor="@color/title_text_color"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linear_sort"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="70dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout">
        <TextView
            android:id="@+id/tv_sort"
            android:text="@string/sortName"
            android:textColor="?attr/theme_color"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="编辑分类"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_privacy"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="70dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout">
        <TextView
            android:id="@+id/tv_lock"
            android:text="@string/lock"
            android:textColor="?attr/theme_color"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="隐私保护"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_font"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="70dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_sort">
        <TextView
            android:id="@+id/tv_font"
            android:text="@string/font"
            android:textColor="?attr/theme_color"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="文字大小 "
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_skin"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="70dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_sort">
        <TextView
            android:id="@+id/tv_skin"
            android:text="@string/skin"
            android:textColor="?attr/theme_color"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="更换皮肤"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_about"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="70dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_skin">
        <TextView
            android:id="@+id/tv_about"
            android:text="@string/about"
            android:textColor="?attr/theme_color"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="关于我们"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_migration"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="70dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_skin">
        <TextView
            android:id="@+id/tv_migration"
            android:text="@string/migration"
            android:textColor="?attr/theme_color"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="笔记迁移 "
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
