<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:background="@color/activity_backGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.syezon.note_xh.activity.ShowPageActivity">

    <RelativeLayout
        android:background="?attr/custom_actionbar_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ActionBarHeight"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">
        <TextView
            android:text="@string/bianqian"
            android:textSize="@dimen/titlesize"
            android:textColor="@color/title_text_color"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caidan"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:id="@+id/tv_menu"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/showpage_ll"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout">
        <RelativeLayout
            android:background="@color/activity_backGround"
            android:id="@+id/rl_showpage_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_time_ima"
                    android:text="@string/clock"
                    android:textSize="16sp"
                    android:textColor="?attr/custom_actionbar_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_time"
                    android:text="时间"
                    android:layout_marginLeft="10dp"
                    android:layout_centerInParent="true"
                    android:textSize="16sp"
                    android:textColor="?attr/custom_actionbar_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <TextView
                android:text="@string/down"
                android:textSize="14sp"
                android:textColor="?attr/custom_actionbar_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/tv_time_arrow"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout
            android:background="@color/unselected_color"
            android:id="@+id/rl_showpage_sort"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_sort_ima"
                    android:text="@string/sortName"
                    android:textSize="16sp"
                    android:textColor="?attr/theme_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_sort"
                    android:text="分类"
                    android:layout_marginLeft="10dp"
                    android:layout_centerInParent="true"
                    android:textSize="16sp"
                    android:textColor="?attr/theme_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:text="@string/down"
                android:textSize="14sp"
                android:textColor="?attr/custom_actionbar_color"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/tv_sort_arrow"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/showpage_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/showpage_container" />


</RelativeLayout>
